Fix text clipping issue in sign-in field, and issue where focus text was green

--- a/static/app.css
+++ b/static/app.css
@@ -5043,17 +5043,17 @@ span, button, input {
 
 .login-box-input {
   margin-bottom: 1.25rem;
+  color: black;
   height: 2rem;
   border: 0;
   padding-left: 0;
   box-shadow: none;
   border-bottom: 1px solid #aaf0d1;
-  font-weight: 400; }
-  .login-box-input::placeholder {
-    padding-left: 20px; }
+  font-weight: 400;
+  padding-left: 20px; }
 
 .login-box-input:focus {
-  color: #aaf0d1;
+  color: black;
   transition: 0.2s ease-in-out;
   box-shadow: none;
   border: 0;
